fix: Instagram Share box colors
this took way too long to fix and i am annoyed at instagram.

--- a/styles/instagram/catppuccin.user.css
+++ b/styles/instagram/catppuccin.user.css
@@ -151,6 +151,16 @@
     svg[aria-label="Verified"] {
       fill: @accent-color;
     }
+
+ //Share box
+	   .xzloghq {background-color: @overlay0}
+  .xzloghq:hover {color: @accent-color; background-color: @accent-color}
+	 .xk5f4mz {background-color: @mantle}
+	  .xk5f4mz:hover {background-color: @accent-color}
+	  .x3nfvp2 {color: @text}
+	  .x3nfvp2:hover {color: @mantle}
+	
+    
     // Excluded:
     // - _9ys7, _9_1f, _9ys8 (verified icon)
     [style*='background-image: url("https://static.cdninstagram.com/rsrc.php/v3/y4/r/ewSyA8IItw_.png")'],
